<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchasePageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/purple_500"
            app:cardCornerRadius="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            app:cardBackgroundColor="@color/cardview_dark_background"
                            app:cardCornerRadius="15dp">

                            <ImageView
                                android:id="@+id/purchase_item_card_preview_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/purchase_item_card_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingTop="10dp"
                                android:text="Item name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                            <TextView
                                android:id="@+id/purchase_item_card_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="10dp"
                                android:paddingTop="10dp"
                                android:text="$139.99"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/purchase_item_card_seller"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="75dp"
                            android:paddingRight="10dp"
                            android:text="sellerUsername"
                            android:textAlignment="textEnd"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Shipping"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <RadioGroup
                            android:id="@+id/radiogroup_shipping"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/radio_shipping_seller_delivery"
                            android:layout_marginLeft="75dp">

                            <RadioButton
                                android:id="@+id/radio_shipping_meet_seller"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:text="Meet Seller"
                                android:onClick="checkButton"/>

                            <RadioButton
                                android:id="@+id/radio_shipping_seller_delivery"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:text="Seller Delivery"
                                android:onClick="checkButton" />

                            <RadioButton
                                android:id="@+id/radio_shipping_other_arranged"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:text="Other (Arranged Meeting)"
                                android:onClick="checkButton" />
                        </RadioGroup>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Payment"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@id/radio_payment_person"
                            android:layout_marginLeft="75dp">

                            <RadioButton
                                android:id="@+id/radio_payment_person"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:text="Pay in person" />

                            <RadioButton
                                android:id="@+id/radio_payment_now"
                                android:layout_width="wrap_content"
                                android:layout_height="30dp"
                                android:text="Pay now" />
                        </RadioGroup>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Order Total"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:text="Subtotal" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/purchase_item_subtotal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="$139.99" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:text="Shipping" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/purchase_item_shipping"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="$0.00" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:text="Tax" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/purchase_item_tax"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="$8.40" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="25dp"
                                android:text="Total"
                                android:textStyle="bold" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/purchase_item_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="25dp"
                                android:text="$148.39"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/purchase_item_confirm_purchase"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/purple_700"
                            app:cardCornerRadius="100dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="10dp"
                                android:text="Confirm Purchase"
                                android:textAlignment="center"
                                android:textColor="#E1E1E1"
                                android:textSize="18dp"
                                android:textStyle="bold" />
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>