...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/eduswap"/>

        <EditText
            android:id="@+id/UsernameTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eduswap_logo"
            android:ems="10"
            android:hint="Enter Username:"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PasswordTextField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/UsernameTextField"
            android:ems="10"
            android:hint="Enter PIN:"
            android:inputType="numberPassword" />
...
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:text="" />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Login" />


    </RelativeLayout>

</RelativeLayout>
