...
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homepage_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/active_listing_cardview" />

        <androidx.cardview.widget.CardView
            android:id="@+id/homepage_create_listing_button"
...
